--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>untitled2</artifactId>
+    <artifactId>missing-number-in-row</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
